--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -8,10 +8,11 @@
       text-align: center;
       margin: 20px;
     }
-    #question, #finalImage {
+    #question, #finalImage, #introImage {
       max-width: 100%;
       max-height: 300px;
-      margin-bottom: 20px;
+      margin: 20px auto;
+      display: block;
     }
     #map {
       max-width: 100%;
@@ -22,18 +23,40 @@
       margin-top: 20px;
       font-size: 1.2em;
     }
+    #startScreen, #surveyScreen, #resultsScreen {
+      display: none;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 1em;
+      margin-top: 20px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
-<h2>Map Location Survey</h2>
-<img id="question" src="" alt="Question Image">
-<p id="counter">Question 1 of 10</p>
+<!-- 🔵 Start Screen -->
+<div id="startScreen">
+  <h1>Map Location Survey</h1>
+  <p>Welcome! You'll be shown a series of images. For each one, click the correct location on the map below. Your accuracy will be scored.</p>
+  <img id="introImage" src="intro.png" alt="Intro Image">
+  <button onclick="startSurvey()">Start</button>
+</div>
 
-<img id="map" src="map.png" alt="Map Image">
-<p id="result"></p>
+<!-- 🟡 Survey Screen -->
+<div id="surveyScreen">
+  <img id="question" src="" alt="Question Image">
+  <p id="counter">Question 1 of 10</p>
+  <img id="map" src="map.png" alt="Map Image">
+</div>
 
-<img id="finalImage" src="final.png" alt="Final Image" style="display: none;">
+<!-- 🟢 Results Screen -->
+<div id="resultsScreen">
+  <h2>Your Results</h2>
+  <img id="finalImage" src="final.png" alt="Final Image">
+  <p id="result"></p>
+</div>
 
 <script>
   const totalQuestions = 10;
@@ -41,21 +64,29 @@
   const correctPoints = [
     [120, 150], [200, 180], [250, 220], [300, 170], [210, 300],
     [190, 210], [230, 250], [280, 200], [260, 260], [240, 230]
-  ];
+  ]; // Use original size coordinates for map.png
 
   let current = 1;
   let scores = [];
+
+  const startScreen = document.getElementById('startScreen');
+  const surveyScreen = document.getElementById('surveyScreen');
+  const resultsScreen = document.getElementById('resultsScreen');
 
   const questionImg = document.getElementById('question');
   const mapImg = document.getElementById('map');
   const counterText = document.getElementById('counter');
   const resultBox = document.getElementById('result');
-  const finalImage = document.getElementById('finalImage');
+
+  function startSurvey() {
+    startScreen.style.display = 'none';
+    surveyScreen.style.display = 'block';
+    loadQuestion(current);
+  }
 
   function loadQuestion(num) {
     questionImg.src = `img${num}.png`;
     counterText.textContent = `Question ${num} of ${totalQuestions}`;
-    resultBox.textContent = '';
   }
 
   mapImg.addEventListener('click', function(event) {
@@ -70,8 +101,10 @@
     const dx = x - correctX;
     const dy = y - correctY;
     const distance = Math.sqrt(dx * dx + dy * dy);
-    const score = Math.max(0, 100 - distance);
-    scores.push(Math.round(score));
+
+    const normalizedScore = Math.max(0, 1 - (distance / 100)); // Scale down based on expected range
+    const score = Math.min(1, normalizedScore).toFixed(2); // Clamp to 1.00, round to 2 decimal places
+    scores.push(parseFloat(score));
 
     if (current < totalQuestions) {
       current++;
@@ -82,23 +115,20 @@
   });
 
   function showResults() {
-    questionImg.style.display = 'none';
-    counterText.style.display = 'none';
-    mapImg.style.display = 'none';
+    surveyScreen.style.display = 'none';
+    resultsScreen.style.display = 'block';
 
-    let html = `<h3>Your Results</h3>`;
+    let html = '';
     let total = scores.reduce((a, b) => a + b, 0);
     scores.forEach((s, i) => {
-      html += `Question ${i + 1}: ${s} points<br>`;
+      html += `Question ${i + 1}: ${s.toFixed(2)}<br>`;
     });
-    html += `<strong>Total Score: ${total} / ${100 * totalQuestions}</strong>`;
+    html += `<br><strong>Final Score: ${total.toFixed(2)} / ${totalQuestions.toFixed(2)}</strong>`;
     resultBox.innerHTML = html;
-
-    finalImage.style.display = 'block';
   }
 
-  // Start the first question
-  loadQuestion(current);
+  // Show start screen on load
+  startScreen.style.display = 'block';
 </script>
 
 </body>
