--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Map Click Survey</title>
+  <title>Place the Faces</title>
   <style>
     body {
       font-family: sans-serif;
