--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -38,8 +38,8 @@
 
 <!-- 🔵 Start Screen -->
 <div id="startScreen">
-  <h1>Map Location Survey</h1>
-  <p>Welcome! You'll be shown a series of images. For each one, click the correct location on the map below. Your accuracy will be scored.</p>
+  <h1>Place The Faces!</h1>
+  <p>Hi! Thanks for taking my survey!<br>Diversity is a wonderful thing, but it can oftentimes be misunderstood. Oftentimes, even well-intentioned individuals will automatically assume the cultural background of a person at a glance.<br>This misidentification is very hamful, and can make individuals feel excluded or pressure them into acting in a way that does not reflect their true self.<br>Take the survey to test how well you can really identify a person's cultural origin.<br>You will be presented with the faces of 10 people. Try to click the location on the map that you think they're from. At the end, their places of origin will be revealed, and your score will be calculated.<br>Good luck!</p>
   <img id="introImage" src="intro.png" alt="Intro Image">
   <button onclick="startSurvey()">Start</button>
 </div>
