--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -40,7 +40,7 @@
 <div id="startScreen">
   <h1>Place The Faces!</h1>
   <p>Hi! Thanks for taking my survey!<br>Diversity is a wonderful thing, but it can oftentimes be misunderstood. Oftentimes, even well-intentioned individuals will automatically assume the cultural background of a person at a glance.<br>This misidentification is very hamful, and can make individuals feel excluded or pressure them into acting in a way that does not reflect their true self.<br>Take the survey to test how well you can really identify a person's cultural origin.<br>You will be presented with the faces of 10 people. Try to click the location on the map that you think they're from. At the end, their places of origin will be revealed, and your score will be calculated.<br>Good luck!</p>
-  <p>[V1]</p>
+  <p>[V2]</p>
   <img id="introImage" src="intro.png" alt="Intro Image">
   <button onclick="startSurvey()">Start</button>
 </div>
@@ -57,7 +57,7 @@
   <h2>Your Results</h2>
   <img id="finalImage" src="final.png" alt="Final Image">
   <p id="result"></p>
-  <p>If you're like the vast majority of people, your score should have been pretty low. You would have to be a cultural expert to have placed all of those faces correctly!<br>When meeting people for the first time, consider asking them about their cultural background! It takes 5 seconds, and it makes both parties feel more comfortable.<br>Answer Key:<br>1- Northern Manitoba, Canada (312, 116)<br>2- Tolar Grande, Salta, Argentina (368, 480)<br>3- Trinidad, Cuba (310, 265)<br>4- Johor Bahru, Malaysia (1068, 355)<br>5- Outside Kunduz Province, Afghanistan (903, 196)<br>6- Ziz Valley, Morocco (619, 218)<br>7- Madinat Zayed, Abu Dhabi (855, 256)<br>8- Italy, Martino di Castrozza (682, 157)<br>9- Flores Island, Indonesia (1139, 403)<br>10- Tashkurgan, China (934, 192)</p>
+  <p>If you're like the vast majority of people, your score should have been pretty low. You would have to be a cultural expert to have placed all of those faces correctly!<br>When meeting people for the first time, consider asking them about their cultural background! It takes 5 seconds, and it makes both parties feel more comfortable.<br><br>Each person's image was sourced from the 'My Shot' National Geographic program, which promotes individual photographers.<br>Each person consented to have their image taken.<br><br>Below is the answer key for each image.<br>The listed coordinates were the reference points used as the answer key in the map image you clicked on.<br><br>Answer Key:<br>1- Northern Manitoba, Canada (312, 116)<br>2- Tolar Grande, Salta, Argentina (368, 480)<br>3- Trinidad, Cuba (310, 265)<br>4- Johor Bahru, Malaysia (1068, 355)<br>5- Outside Kunduz Province, Afghanistan (903, 196)<br>6- Ziz Valley, Morocco (619, 218)<br>7- Madinat Zayed, Abu Dhabi (855, 256)<br>8- Italy, Martino di Castrozza (682, 157)<br>9- Flores Island, Indonesia (1139, 403)<br>10- Tashkurgan, China (934, 192)</p>
 </div>
 
 <script>
